# rubicon-ml

./: .buildinfo  .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .whitesource  CODEOWNERS  MANIFEST.in  README.md  api_reference.html  conftest.py  contribute-schema.html  contributing.html  dashboard.html  developer-guide.html  environment.yml  examples.html  faqs.html  genindex.html  git-integration.html  glossary.html  index.html  install.html  install_open_source.html  integration-git.html  integration-git.ipynb  integration-prefect-workflows.html  integration-sklearn.html  integrations.html  library_reference.html  logging-asynchronously.html  logging-asynchronously.ipynb  logging-basics.html  logging-basics.ipynb  logging-concurrently.html  logging-concurrently.ipynb  logging-in-prefect-flows.html  logging-training-metadata.html  logging-training-metadata.ipynb  (+18 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_request.md  enhancement_request.md  feature_request.md  submit_question.md
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: edgetest.yml  publish-docs.yml  publish-package.yml  test-package.yml  validate-pr-title.yml
_sources/: api_reference.rst.txt  contribute-schema.rst.txt  contributing.rst.txt  examples.rst.txt  faqs.rst.txt  glossary.rst.txt  index.rst.txt  install.rst.txt  install_open_source.rst.txt  integrations.rst.txt  library_reference.rst.txt  quick_look.rst.txt  schema-representation.rst.txt  visualizing-logged-dataframes.ipynb.txt
_sources/integrations/: integration-prefect-workflows.ipynb.txt  integration-sklearn.ipynb.txt
_sources/logging-examples/: logging-asynchronously.ipynb.txt  logging-basics.ipynb.txt  logging-concurrently.ipynb.txt  logging-plots.ipynb.txt  multiple-backend.ipynb.txt  visualizing-logged-dataframes.ipynb.txt
_sources/quick-look/: visualizing-experiments.ipynb.txt
_sources/visualizations/: experiments-table.ipynb.txt  metric-lists-comparisons.ipynb.txt
_static/: custom.css
binder/: environment.yml  exploring-an-existing-rubicon-ml-project.ipynb  logging-your-own-rubicon-ml-projcet.ipynb  postBuild  requirements.txt  start  welcome.ipynb  welcome.md  workspace.json
ci/: environment.yml  match_version.sh
docs/: Makefile  README.md  build-docs.sh  docs-environment.yml
docs/source/: advanced_logging.rst  api_reference.rst  backend-repositories.rst  basic_logging.rst  conf.py  contributing.rst  dashboard.rst  developer-guide.rst  examples.rst  faqs.rst  glossary.rst  how_to_guides.rst  index.rst  install.rst  integrations.rst  library_reference.rst  visualization_widgets.rst  visualizations.rst
integrations/: integration-git.html  integration-git.ipynb  integration-prefect-workflows.html  integration-sklearn.html  integration-sklearn.ipynb
logging-examples/: log-with-schema.html  logging-asynchronously.html  logging-basics.html  logging-basics.ipynb  logging-concurrently.html  logging-concurrently.ipynb  logging-experiment-failures.html  logging-feature-plots.html  logging-plots.html  logging-training-metadata.html  logging-training-metadata.ipynb  manage-experiment-relationships.html  multiple-backend.html  multiple-backend.ipynb  register-custom-schema.html  rubiconJSON-querying.html  rubiconJSON-querying.ipynb  set-schema.html  set-schema.ipynb  tagging.html  visualizing-logged-dataframes.html  visualizing-logged-dataframes.ipynb
notebooks/: README.md  ahP.ipynb  collaboration-and-review.ipynb  git-integration.ipynb  jupyterlab-dash.ipynb  logging_feature_plots.ipynb  plotting-support.ipynb  quick-look.ipynb  shap example.ipynb  sklearn-integration.ipynb  user-environment.yml  visualizing-logged-dataframes.ipynb
notebooks/demos/: classification.ipynb
notebooks/dev/: jsonpath.ipynb  pipeline-hide-warnings.ipynb  repo-refactor.ipynb
notebooks/developer/: grid-search-pipeline.ipynb  rubicon-pipeline.ipynb
notebooks/integrations/: integration-git.ipynb  integration-prefect-workflows.ipynb  integration-sklearn.ipynb
notebooks/logging-examples/: commenting.ipynb  log-with-schema.ipynb  logging-asynchronously.ipynb  logging-basics.ipynb  logging-concurrently.ipynb  logging-concurrently.py  logging-experiment-failures.ipynb  logging-feature-plots.ipynb  logging-plots.ipynb  logging-training-metadata.ipynb  logging_concurrently.py  logging_feature_plots.ipynb  manage-experiment-relationships.ipynb  multiple-backend.ipynb  register-custom-schema.ipynb  rubiconJSON-querying.ipynb  set-schema.ipynb  tagging.ipynb  visualizing-logged-dataframes.ipynb
notebooks/quick-look/: logging-experiments.ipynb  sharing-experiments.ipynb  visualizing-experiments.ipynb
notebooks/tutorials/: failure-modes.ipynb
notebooks/viz/: dashboard-compilation.ipynb  dashboard.ipynb  dataframe-plot.ipynb  experiments-table.ipynb  metric-comparisons.ipynb  metric-correlation-plot.ipynb  metric-lists-comparisons.ipynb  plot-artifacts.ipynb  plot-comparisons.ipynb  plot-complex-artifacts.ipynb  plot-dataframes.ipynb  plot-metric-correlation.ipynb
quick-look/: logging-experiments.html  logging-experiments.ipynb  sharing-experiments.html  visualizing-experiments.html
rubicon/: __init__.py  _version.py  cli.py  version.py
rubicon/client/: __init__.py  artifact.py  base.py  config.py  dataframe.py  experiment.py  feature.py  metric.py  mixin.py  parameter.py  project.py  rubicon.py
rubicon/domain/: __init__.py  artifact.py  dataframe.py  experiment.py  feature.py  metric.py  mixin.py  parameter.py  project.py
rubicon/intake_rubicon/: README.md  __init__.py  base.py  experiment.py  project.py
rubicon/repository/: __init__.py  base.py  local.py  memory.py  s3.py
rubicon/sklearn/: __init__.py  base_logger.py  estimator_logger.py  filter_logger.py  (+4 more)
rubicon_ml/: __init__.py  _version.py  cli.py  exceptions.py  imports.py  types.py
tests/: fixtures.py
tutorials/: failure-modes.html  failure-modes.ipynb
visualizations/: dashboard.html  dataframe-plot.html  experiments-table.html  metric-correlation-plot.html  metric-lists-comparisons.html
(+277 files in other folders)
