[metadata]
name = rubicon-ml
version = 0.11.0
description = "an ML library for model development and governance"
long_description = file: README.md
long_description_content_type = text/markdown
author = "Joe Wolfe, Ryan Soley, Diane Lee, Mike McCarty, CapitalOne"
license = "Apache License, Version 2.0"
url = https://github.com/capitalone/rubicon-ml
python_requires = 
	>=3.8.0
project_urls = 
	Documentation = https://capitalone.github.io/rubicon-ml/
	Bug Tracker = https://github.com/capitalone/rubicon-ml/issues
	Source Code = https://github.com/capitalone/rubicon-ml
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Information Analysis
	Topic :: Software Development :: Build Tools
	Topic :: Software Development :: Documentation
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
	click<=8.2.1,>=7.1
	fsspec<=2025.7.0,>=2021.4.0
	intake<=2.0.8,>=0.5.2
	jsonpath-ng<=1.7.0,>=1.5.3
	numpy<=2.3.1,>=1.22.0
	pandas<=2.3.1,>=1.0.0
	pyarrow<=20.0.0,>=14.0.1
	PyYAML<=6.0.2,>=5.4.0
	scikit-learn<=1.7.0,>=0.22.0

[options.extras_require]
all = 
	rubicon-ml[s3,viz]
build = 
	wheel
	setuptools>=80.3.1
	twine
dev = 
	rubicon-ml[build,docs,qa,s3,test,viz]
docs = 
	furo
	ipython
	nbsphinx
	numpydoc
	pandoc
	rubicon-ml[viz]
	sphinx
	sphinx-copybutton
qa = 
	black
	edgetest
	flake8
	isort
	pre-commit
s3 = 
	s3fs<=2025.7.0,>=0.4
test = 
	dask[dataframe,distributed]<2025.4.0
	h2o
	ipykernel
	jupyterlab
	lightgbm
	nbconvert
	polars<1.0
	pytest
	pytest-cov
	xgboost
ui = 
	rubicon-ml[viz]
viz = 
	dash<=2.18.2,>=2.11.0
	dash-bootstrap-components<=1.7.1,>=1.0.0

[options.entry_points]
console_scripts = 
	rubicon_ml = rubicon_ml.cli:cli
intake.drivers = 
	rubicon_ml_experiment = rubicon_ml.intake_rubicon.experiment:ExperimentSource
	rubicon_ml_experiment_table = rubicon_ml.intake_rubicon.viz:ExperimentsTableDataSource
	rubicon_ml_metric_correlation_plot = rubicon_ml.intake_rubicon.viz:MetricCorrelationPlotDataSource
	rubicon_ml_dataframe_plot = rubicon_ml.intake_rubicon.viz:DataframePlotDataSource
	rubicon_ml_metric_list = rubicon_ml.intake_rubicon.viz:MetricListComparisonDataSource

[flake8]
exclude = docs, .ipynb_checkpoints
max-line-length = 88
ignore = 
	E731
	E741
	W503
	E203
	E501

[isort]
line_length = 88
skip = rubicon_ml/client/__init__.py
filter_files = True
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
combine_as_imports = True

[tool:pytest]
markers = 
	run_notebooks: tests that run Jupyter notebooks
	write_files: tests that physically write files to local and S3 filesystems
addopts = --cov=./rubicon_ml --cov-report=term-missing --cov-fail-under=90 -m="not write_files"
minversion = 3.2
xfail_strict = True

[edgetest.envs.core]
python_version = 3.11
deps = 
	kaleido
	palmerpenguins
	Pillow
extras = 
	dev
upgrade = 
	click
	fsspec
	intake
	jsonpath-ng
	numpy
	pandas
	pyarrow
	PyYAML
	s3fs
	scikit-learn
command = 
	pytest
